Json for saving WordInbounds was changed. added API for translation